--- a/ApiQuiz/MainPage.xaml
+++ b/ApiQuiz/MainPage.xaml
@@ -2,5 +2,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ApiQuiz.MainPage">
+    <StackLayout>
+            <Label Text="Quiz Api" FontSize="Title"/>
+            
+            <Label Text="Choose Subject" FontSize="Header"/>
+            <Picker x:Name="PickerCategory"/>
+        
+            <Label Text="Amount of question" FontSize="Header"/>
+            <Editor x:Name="AmountQuestion"/>
+
+            <Button Text="Start quiz" Clicked="StartQuiz"/>
+    </StackLayout>
 
 </ContentPage>
